--- a/.classpath
+++ b/.classpath
@@ -6,12 +6,15 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Selenium/selenium-server-4.8.0.jar"/>
 	<classpathentry kind="lib" path="jars/extentReportJars/extentreports-5.0.9.jar"/>
 	<classpathentry kind="lib" path="jars/extentReportJars/freemarker-2.3.30.jar"/>
 	<classpathentry kind="lib" path="jars/extentReportJars/gson-2.8.6.jar"/>
 	<classpathentry kind="lib" path="jars/extentReportJars/lombok-1.18.12.jar"/>
 	<classpathentry kind="lib" path="jars/extentReportJars/reactive-streams-1.0.3.jar"/>
 	<classpathentry kind="lib" path="jars/extentReportJars/rxjava-3.0.4.jar"/>
+	<classpathentry kind="lib" path="jars/selenium-server-4.8.2.jar" sourcepath="D:/Selenium/selenium-server-4.8.2.jar"/>
+	<classpathentry kind="lib" path="jars/jcommander-1.78.jar"/>
+	<classpathentry kind="lib" path="jars/jquery-3.5.1.jar"/>
+	<classpathentry kind="lib" path="jars/testng-7.4.0.jar" sourcepath="C:/Users/ganes/eclipse-workspace/seleniumPractie/jars/testng-7.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
